<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_advanced"
        android:icon="@drawable/ic_advanced_mathematics"
        android:title="@string/action_advanced"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_unit"
        android:icon="@drawable/ic_unit_mathematics"
        android:title="@string/action_unit"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_normal"
        android:icon="@drawable/ic_normal_mathematics"
        android:title="@string/action_normal"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->

    <item android:id="@+id/action_help"
        android:title="@string/btnHelp"
        app:showAsAction="never"/>

    <item android:id="@+id/action_quit"
        android:title="@string/btnQuit"
        app:showAsAction="never"/>



</menu>