<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/buttonNine"
        style="@style/MyButtonStyle"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/btnNine"
        app:layout_constraintBottom_toTopOf="@+id/buttonSix"
        app:layout_constraintEnd_toStartOf="@+id/buttonAddition"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonEight"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplay" />

    <Button
        android:id="@+id/buttonEight"
        style="@style/MyButtonStyle"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/btnEight"
        app:layout_constraintBottom_toTopOf="@+id/buttonFive"
        app:layout_constraintEnd_toStartOf="@+id/buttonNine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonSeven"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplay" />

    <Button
        android:id="@+id/buttonSeven"
        style="@style/MyButtonStyle"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/btnSeven"
        app:layout_constraintBottom_toTopOf="@+id/buttonFour"
        app:layout_constraintEnd_toStartOf="@+id/buttonEight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplay" />

    <Button
        android:id="@+id/buttonSix"
        style="@style/MyButtonStyle"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/btnSix"
        app:layout_constraintBottom_toTopOf="@+id/buttonThree"
        app:layout_constraintEnd_toStartOf="@+id/buttonSubtract"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonFive"
        app:layout_constraintTop_toBottomOf="@+id/buttonNine" />

    <Button
        android:id="@+id/buttonFive"
        style="@style/MyButtonStyle"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/btnFive"
        app:layout_constraintBottom_toTopOf="@+id/buttonTwo"
        app:layout_constraintEnd_toStartOf="@+id/buttonSix"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonFour"
        app:layout_constraintTop_toBottomOf="@+id/buttonEight" />

    <Button
        android:id="@+id/buttonFour"
        style="@style/MyButtonStyle"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/btnFour"
        app:layout_constraintBottom_toTopOf="@+id/buttonOne"
        app:layout_constraintEnd_toStartOf="@+id/buttonFive"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSeven" />

    <Button
        android:id="@+id/buttonThree"
        style="@style/MyButtonStyle"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/btnThree"
        app:layout_constraintBottom_toTopOf="@+id/buttonSum"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonTwo"
        app:layout_constraintTop_toBottomOf="@+id/buttonSix" />

    <Button
        android:id="@+id/buttonTwo"
        style="@style/MyButtonStyle"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/btnTwo"
        app:layout_constraintBottom_toTopOf="@+id/buttonClear"
        app:layout_constraintEnd_toStartOf="@+id/buttonThree"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonOne"
        app:layout_constraintTop_toBottomOf="@+id/buttonFive" />

    <Button
        android:id="@+id/buttonOne"
        style="@style/MyButtonStyle"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/btnOne"
        app:layout_constraintBottom_toTopOf="@+id/buttonZero"
        app:layout_constraintEnd_toStartOf="@+id/buttonTwo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFour" />

    <Button
        android:id="@+id/buttonZero"
        style="@style/MyButtonStyle"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/btnZero"
        app:layout_constraintBottom_toTopOf="@+id/buttonHelp"
        app:layout_constraintEnd_toStartOf="@+id/buttonClear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOne" />

    <Button
        android:id="@+id/buttonClear"
        style="@style/MyButtonStyle"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/btnClear"
        app:layout_constraintBottom_toTopOf="@+id/buttonHelp"
        app:layout_constraintEnd_toStartOf="@+id/buttonSum"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonZero"
        app:layout_constraintTop_toBottomOf="@+id/buttonTwo" />

    <Button
        android:id="@+id/buttonSum"
        style="@style/MyButtonStyle"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/btnSum"
        app:layout_constraintBottom_toTopOf="@+id/buttonQuit"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiplicate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonClear"
        app:layout_constraintTop_toBottomOf="@+id/buttonThree" />

    <Button
        android:id="@+id/buttonMultiplicate"
        style="@style/MyButtonStyle"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/btnMultiplicate"
        app:layout_constraintBottom_toTopOf="@+id/buttonQuit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonSum"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide" />

    <Button
        android:id="@+id/buttonDivide"
        style="@style/MyButtonStyle"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/btnDivide"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiplicate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonThree"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubtract" />

    <Button
        android:id="@+id/buttonSubtract"
        style="@style/MyButtonStyle"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/btnSubtraction"
        app:layout_constraintBottom_toTopOf="@+id/buttonDivide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonSix"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddition" />

    <Button
        android:id="@+id/buttonAddition"
        style="@style/MyButtonStyle"
        android:layout_height="0dp"
        android:onClick="buttonClick"
        android:text="@string/btnAddition"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonNine"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplay" />

    <Button
        android:id="@+id/buttonHelp"
        style="@style/MyButtonStyle"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="buttonClick"
        android:text="@string/btnHelp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonQuit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonQuit"
        style="@style/MyButtonStyle"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="buttonClick"
        android:text="@string/btnQuit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonHelp" />

    <EditText
        android:id="@+id/tvDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:gravity="end"
        android:inputType=""
        android:text="@string/btnZero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />


</android.support.constraint.ConstraintLayout>